--- a/BUILD.gn
+++ b/BUILD.gn
@@ -11,11 +11,9 @@ ets_loader_declarations_dir = get_label_info(":build_ets_loader_library",
 ets_loader_component_config_file =
     get_label_info(":build_ets_loader_library", "target_out_dir") +
     "/component_config.json"
-ets_sysResource = get_label_info(":build_ets_sysResource", "target_out_dir") +
-                  "/sysResource.js"
 
 action("build_ets_loader_library") {
-  script = "//foundation/ace/huawei_proprietary/tools/ets-loader/build_ets_loader_library.py"
+  script = "//developtools/ace-ets2bundle/build_ets_loader_library.py"
   depfile = "$target_gen_dir/$target_name.d"
   outputs = [
     ets_loader_lib_dir,
@@ -23,15 +21,13 @@ action("build_ets_loader_library") {
     ets_loader_component_config_file,
   ]
 
-  _ets_loader_dir =
-      "//foundation/ace/huawei_proprietary/tools/ets-loader/compiler"
-  _ace_toolkit_dir = "//prebuilts/ace-toolkit/ets-loader/compiler"
+  _ets_loader_dir = "//developtools/ace-ets2bundle/compiler"
   _declarations_file_dir = "//interface/sdk-js/api/@internal/component/ets"
 
-  _babel_js = _ace_toolkit_dir + "/node_modules/@babel/cli/bin/babel.js"
-  _babel_config_js = _ace_toolkit_dir + "/babel.config.js"
-  _uglify_source_js = _ace_toolkit_dir + "/uglify-source.js"
-  _build_declarations_file_js = _ace_toolkit_dir + "/build_declarations_file.js"
+  _babel_js = _ets_loader_dir + "/node_modules/@babel/cli/bin/babel.js"
+  _babel_config_js = _ets_loader_dir + "/babel.config.js"
+  _uglify_source_js = _ets_loader_dir + "/uglify-source.js"
+  _build_declarations_file_js = _ets_loader_dir + "/build_declarations_file.js"
 
   inputs = [
     _babel_config_js,
@@ -43,10 +39,10 @@ action("build_ets_loader_library") {
   # different host platform nodejs tool directory
   if (host_os == "linux") {
     nodejs_path =
-        "//prebuilts/ace-toolkit/nodejs/node-v12.18.4-linux-x64/bin/node"
+        "//prebuilts/build-tools/common/nodejs/node-v12.18.4-linux-x64/bin/node"
   } else if (host_os == "mac") {
     nodejs_path =
-        "//prebuilts/ace-toolkit/nodejs/node-v12.18.4-darwin-x64/bin/node"
+        "//prebuilts/build-tools/common/nodejs/node-v12.18.4-darwin-x64/bin/node"
   } else {
     assert(false, "Unsupported host_os: $host_os")
   }
@@ -77,27 +73,8 @@ action("build_ets_loader_library") {
   ]
 }
 
-action("build_ets_sysResource") {
-  script = "//foundation/ace/huawei_proprietary/tools/ets-loader/generateSysResource.py"
-  outputs = [ ets_sysResource ]
-
-  _id_defined_json =
-      "//utils/resources/systemres/main/resources/base/element/id_defined.json"
-  inputs = [ _id_defined_json ]
-
-  args = [
-    "--input-json",
-    rebase_path(_id_defined_json, root_build_dir),
-    "--output-js",
-    rebase_path(ets_sysResource, root_build_dir),
-  ]
-}
-
 ohos_copy("ets_loader") {
-  deps = [
-    ":build_ets_loader_library",
-    ":build_ets_sysResource",
-  ]
+  deps = [ ":build_ets_loader_library" ]
   sources = [
     "compiler/main.js",
     "compiler/npm-install.js",
@@ -106,7 +83,6 @@ ohos_copy("ets_loader") {
     "compiler/tsconfig.json",
     "compiler/webpack.config.js",
     ets_loader_component_config_file,
-    ets_sysResource,
   ]
   outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
   module_source_dir = target_out_dir + "/$target_name"
