--- a/compiler/package.json
+++ b/compiler/package.json
@@ -14,7 +14,7 @@
     "create": "node ./lib/create.js --env projectName",
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
     "test": "npm run build && mocha -r ts-node/register test/test.ts",
-    "generateDeclarations": "node ./build_declarations_file.js",
+    "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
     "postinstall": "node npm-install.js"
   },
   "devDependencies": {
