--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -12,12 +12,8 @@
     "sourceMap": true,
     "module": "commonjs",
     "target": "es2017",
-    "types": [
-      "node"
-    ],
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
+    "types": [],
+    "typeRoots": [],
     "lib": [
       "es2017"
     ]
