lihong67@huawei.com
add allowJs.

Signed-off-by: lihong <lihong67@huawei.com>
Change-Id: I679172b84264634052cdeec8f3d715e1a781315f

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
