--- a/compiler/package.json
+++ b/compiler/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.0",
-    "deccjsunit": "latest",
+    "deccjsunit": "1.0.3",
     "log4js": "^6.3.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
