--- a/compiler/package.json
+++ b/compiler/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "lint": "eslint --fix ./src --ext .ts",
-    "build": "npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts",
+    "build": "node build_peg.js && npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts",
     "create": "node ./lib/create.js --env projectName",
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
     "test": "npm run build && mocha -r ts-node/register test/test.ts",
@@ -36,6 +36,7 @@
     "copy-webpack-plugin": "^8.1.0",
     "deccjsunit": "latest",
     "log4js": "^6.3.0",
+    "pegjs": "^0.10.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^5.48.0",
