fixed 4990f42 from https://gitee.com/lihong67/developtools_ace-ets2bundle/pulls/52 lihong67@huawei.com
sync code.

Signed-off-by: lihong <lihong67@huawei.com>
Change-Id: Ie736d68b82983f8d87bfd00a4694671242c0619c

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "importsNotUsedAsValues": "preserve",
     "noImplicitAny": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
