--- a/BUILD.gn
+++ b/BUILD.gn
@@ -6,6 +6,8 @@ import("//foundation/ace/ace_engine/ace_config.gni")
 
 ets_loader_lib_dir =
     get_label_info(":build_ets_loader_library", "target_out_dir") + "/lib"
+ets_loader_peg_dir =
+    get_label_info(":build_ets_loader_library", "target_out_dir") + "/peg_parser/dist"
 ets_loader_declarations_dir = get_label_info(":build_ets_loader_library",
                                              "target_out_dir") + "/declarations"
 ets_loader_component_config_file =
@@ -17,6 +19,7 @@ action("build_ets_loader_library") {
   depfile = "$target_gen_dir/$target_name.d"
   outputs = [
     ets_loader_lib_dir,
+    ets_loader_peg_dir,
     ets_loader_declarations_dir,
     ets_loader_component_config_file,
   ]
@@ -27,12 +30,14 @@ action("build_ets_loader_library") {
   _babel_js = _ets_loader_dir + "/node_modules/@babel/cli/bin/babel.js"
   _babel_config_js = _ets_loader_dir + "/babel.config.js"
   _uglify_source_js = _ets_loader_dir + "/uglify-source.js"
+  _build_peg_js = _ets_loader_dir + "/build_peg.js"
   _build_declarations_file_js = _ets_loader_dir + "/build_declarations_file.js"
 
   inputs = [
     _babel_config_js,
     _babel_js,
     _uglify_source_js,
+    _build_peg_js,
     _build_declarations_file_js,
   ]
 
@@ -56,12 +61,18 @@ action("build_ets_loader_library") {
     rebase_path(_babel_js, root_build_dir),
     "--ets-loader-src-dir",
     rebase_path(_ets_loader_dir + "/src", root_build_dir),
+    "--ets-loader-peg-src-dir",
+    rebase_path(_ets_loader_dir + "/peg_parser/src", root_build_dir),
     "--babel-config-js",
     rebase_path(_babel_config_js, root_build_dir),
     "--uglify-source-js",
     rebase_path(_uglify_source_js, root_build_dir),
+    "--build-peg-js",
+    rebase_path(_build_peg_js, root_build_dir),
     "--output-dir",
     rebase_path(ets_loader_lib_dir, root_build_dir),
+    "--output-peg-dir",
+    rebase_path(ets_loader_peg_dir, root_build_dir),
     "--declarations-file-dir",
     rebase_path(_declarations_file_dir, root_build_dir),
     "--build-declarations-file-js",
@@ -92,6 +103,14 @@ ohos_copy("ets_loader") {
 ohos_copy("ets_loader_library") {
   deps = [ ":build_ets_loader_library" ]
   sources = [ ets_loader_lib_dir ]
+  outputs = [ target_out_dir + "/$target_name" ]
+  module_source_dir = target_out_dir + "/$target_name"
+  module_install_name = ""
+}
+
+ohos_copy("ets_loader_peg") {
+  deps = [ ":build_ets_loader_library" ]
+  sources = [ ets_loader_peg_dir ]
   outputs = [ target_out_dir + "/$target_name" ]
   module_source_dir = target_out_dir + "/$target_name"
   module_install_name = ""
