houhaoyu@huawei.com
fix gn

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I3094f556933152b41d249efb99fe902c35400670

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -147,8 +147,10 @@ ets_loader_sources = [
 ohos_copy("ets_loader") {
   deps = [ ":build_ets_loader_library" ]
   sources = ets_loader_sources
-  deps += [ ":build_ets_sysResource" ]
-  sources += [ ets_sysResource ]
+  if (!is_standard_system) {
+    deps += [ ":build_ets_sysResource" ]
+    sources += [ ets_sysResource ]
+  }
 
   outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
   module_source_dir = target_out_dir + "/$target_name"
