--- a/BUILD.gn
+++ b/BUILD.gn
@@ -141,7 +141,6 @@ ets_loader_sources = [
   "compiler/package.json",
   "compiler/tsconfig.json",
   "compiler/webpack.config.js",
-  ets_loader_component_config_file,
 ]
 
 ohos_copy("ets_loader") {
@@ -149,6 +148,15 @@ ohos_copy("ets_loader") {
   sources = ets_loader_sources
   deps += [ ":build_ets_sysResource" ]
   sources += [ ets_sysResource ]
+
+  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
+  module_source_dir = target_out_dir + "/$target_name"
+  module_install_name = ""
+}
+
+ohos_copy("ets_loader_component_config") {
+  deps = [ ":build_ets_loader_library" ]
+  sources = [ ets_loader_component_config_file ]
 
   outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
   module_source_dir = target_out_dir + "/$target_name"
