--- a/compiler/package.json
+++ b/compiler/package.json
@@ -38,6 +38,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "deccjsunit": "^1.0.6",
+    "ignore-loader": "^0.1.2",
     "log4js": "^6.3.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
