--- a/compiler/package.json
+++ b/compiler/package.json
@@ -30,9 +30,9 @@
     "eslint": "^7.16.0",
     "mocha": "^8.2.1",
     "mocha-context": "^0.1.5",
+    "pegjs": "^0.10.0",
     "ts-node": "^9.1.1",
-    "uglify-js": "^3.13.0",
-    "pegjs": "^0.10.0"
+    "uglify-js": "^3.13.0"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -40,6 +40,7 @@
     "deccjsunit": "^1.0.6",
     "ignore-loader": "^0.1.2",
     "log4js": "^6.3.0",
+    "md5": "^2.3.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^5.48.0",
