fixed 8d77388 from https://gitee.com/lihong67/developtools_ace-ets2bundle/pulls/324 lihong67@huawei.com
optimize ets-loader.

Signed-off-by: lihong <lihong67@huawei.com>
Change-Id: I7358bb5c838c392eb58ad23a06714adf7c56d5cb

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -143,8 +143,18 @@ ets_loader_sources = [
   "compiler/webpack.config.js",
 ]
 
+ohos_copy("copy_deps") {
+  sources =
+      [ "//third_party/typescript/build_package/ohos-typescript-4.2.3-r2.tgz" ]
+  outputs = [ target_out_dir + "/ets_loader/deps/{{source_file_part}}" ]
+  license_file = "//third_party/typescript/LICENSE"
+}
+
 ohos_copy("ets_loader") {
-  deps = [ ":build_ets_loader_library" ]
+  deps = [
+    ":build_ets_loader_library",
+    ":copy_deps",
+  ]
   sources = ets_loader_sources
   deps += [ ":build_ets_sysResource" ]
   sources += [ ets_sysResource ]
