--- a/compiler/package.json
+++ b/compiler/package.json
@@ -41,7 +41,7 @@
     "ignore-loader": "^0.1.2",
     "log4js": "^6.3.0",
     "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
+    "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.2.0",
     "ws": "^8.3.0"
