--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -553,7 +553,7 @@
     "sourceMap": true,
     "module": "commonjs",
     "target": "es2017",
-    "types": [],
+    "types": ["node"],
     "typeRoots": [],
     "lib": [
       "es2020"
