--- a/BUILD.gn
+++ b/BUILD.gn
@@ -14,6 +14,7 @@
 import("//build/ohos.gni")
 import("//build/ohos/ace/ace.gni")
 import("//foundation/ace/ace_engine/ace_config.gni")
+import("//interface/sdk-js/interface_config.gni")
 
 ets_loader_lib_dir =
     get_label_info(":build_ets_loader_library", "target_out_dir") + "/lib"
@@ -270,8 +271,25 @@ ohos_copy("ets_loader_ark_codegen") {
   outputs = [ target_out_dir + "/ets_loader_ark/codegen" ]
 }
 
+ohos_copy("ohos_declaration_ets_ark") {
+  deps = [ "//interface/sdk-js:ohos_declaration_ets" ]
+
+  sources = [ root_out_dir + "/ohos_declaration/ohos_declaration_ets" ]
+
+  outputs = [ target_out_dir + "/../api" ]
+}
+
+ohos_copy("common_api_ark") {
+  sources = common_api_src
+  deps = [ ":ohos_declaration_ets_ark" ]
+  outputs =
+      [ target_out_dir + "/../../developtools/api/{{source_file_part}}" ]
+  module_install_name = ""
+}
+
 ohos_copy("ets_loader_node_modules") {
   deps = [
+    ":common_api_ark",
     ":ets_loader_ark",
     ":ets_loader_ark_codegen",
     ":ets_loader_ark_components",
