update: BUILD.gn
Signed-off-by: laibo102 <laibo2@huawei.com>
Change-Id: Ic4f52a5e360957c62c82cadd0c8c207419f94990

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -282,8 +282,7 @@ ohos_copy("ohos_declaration_ets_ark") {
 ohos_copy("common_api_ark") {
   sources = common_api_src
   deps = [ ":ohos_declaration_ets_ark" ]
-  outputs =
-      [ target_out_dir + "/../../developtools/api/{{source_file_part}}" ]
+  outputs = [ target_out_dir + "/../../developtools/api/{{source_file_part}}" ]
   module_install_name = ""
 }
 
