add TimePicker config
Signed-off-by: yaoyuchi <yaoyuchi@huawei.com>

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -87,6 +87,7 @@
         "TextArea",
         "TextInput",
         "TextTimer",
+        "TimePicker",
         "Toggle",
         "Video",
         "Web",
@@ -494,6 +495,11 @@
             "name": "TextTimer",
             "type": "TextTimerAttribute",
             "instance": "TextTimerInstance"
+          },
+          {
+            "name": "TimePicker",
+            "type": "TimePickerAttribute",
+            "instance": "TimePickerInstance"
           },
           {
             "name": "Toggle",
