houhaoyu@huawei.com
package ts binary file

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I3183f0e7b7b10abf62223036e5f08a64a5bf50cb

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -143,17 +143,19 @@ ets_loader_sources = [
   "compiler/webpack.config.js",
 ]
 
-ohos_copy("copy_deps") {
+ohos_copy("ets_loader_deps") {
   sources =
       [ "//third_party/typescript/build_package/ohos-typescript-4.2.3-r2.tgz" ]
-  outputs = [ target_out_dir + "/ets_loader/deps/{{source_file_part}}" ]
+  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
+  module_source_dir = target_out_dir + "/$target_name"
+  module_install_name = ""
   license_file = "//third_party/typescript/LICENSE"
 }
 
 ohos_copy("ets_loader") {
   deps = [
     ":build_ets_loader_library",
-    ":copy_deps",
+    ":ets_loader_deps",
   ]
   sources = ets_loader_sources
   deps += [ ":build_ets_sysResource" ]
