houhaoyu@huawei.com
合规问题处理

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I2bd7fcf560cb3ef9fde61107c03b0bc3e140067e

--- a/compiler/sample/manifest.json
+++ b/compiler/sample/manifest.json
@@ -5,7 +5,7 @@
   "versionCode": 1,
   "minPlatformVersion": "1.0.1",
   "pages": [
-    "pages/todo",
+    "pages/willdo",
     "pages/index",
     "pages/home",
     "pages/home_preview",
