Switch ts-loader's module to ESM
Signed-off-by: hufeng <hufeng20@huawei.com>
Change-Id: I76cb403661677e3bfb4f610178a10e23470989d7

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -557,7 +557,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "module": "commonjs",
+    "module": "es2020",
     "target": "es2017",
     "types": [],
     "typeRoots": [],
