remote animation api
Signed-off-by: ustclc <liuchao92@huawei.com>
Change-Id: I0f09b62db9d6b22bf617e890734bf76848647f11

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -62,6 +62,7 @@
         "Rating",
         "Rect",
         "Refresh",
+        "RemoteWindow",
         "Row",
         "RowSplit",
         "RichText",
@@ -370,6 +371,11 @@
             "name": "Refresh",
             "type": "RefreshAttribute",
             "instance": "RefreshInstance"
+          },
+          {
+            "name": "RemoteWindow",
+            "type": "RemoteWindowAttribute",
+            "instance": "RemoteWindowInstance"
           },
           {
             "name": "Row",
