--- a/BUILD.gn
+++ b/BUILD.gn
@@ -123,8 +123,7 @@ action("build_ets_sysResource") {
   }
   outputs = [ ets_sysResource ]
 
-  _id_defined_json =
-      "//utils/resources/systemres/main/resources/base/element/id_defined.json"
+  _id_defined_json = "//utils/system_resources/systemres/main/resources/base/element/id_defined.json"
   inputs = [ _id_defined_json ]
 
   args = [
