--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -62,6 +62,7 @@
         "Rating",
         "Rect",
         "Refresh",
+        "RelativeContainer",
         "RemoteWindow",
         "Row",
         "RowSplit",
@@ -366,6 +367,11 @@
             "name": "Rect",
             "type": "RectAttribute",
             "instance": "RectInstance"
+          },
+          {
+            "name": "RelativeContainer",
+            "type": "RelativeContainerAttribute",
+            "instance": "RelativeContainerInstance"
           },
           {
             "name": "Refresh",
