Fix commonjs's resultProcess's regExp
Signed-off-by: hufeng <hufeng20@huawei.com>
Change-Id: Icad6eba1ec1cfbf941379ae8d1e41afad653f919

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -139,6 +139,7 @@ ets_loader_sources = [
   "compiler/npm-install.js",
   "compiler/package-lock.json",
   "compiler/package.json",
+  "compiler/tsconfig.esm.json",
   "compiler/tsconfig.json",
   "compiler/webpack.config.js",
 ]
