lihong67@huawei.com
support custom component common attribute.

Signed-off-by: lihong <lihong67@huawei.com>
Change-Id: I98c2ba45590a80db4a608570c2f0a957f923e566

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -544,6 +544,7 @@
         },
         "property": "stateStyles"
       },
+      "customComponent": "CustomComponent",
     },
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
