--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -544,6 +544,7 @@
         },
         "property": "stateStyles"
       },
+      "customComponent": "CustomComponent",
     },
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
