--- a/compiler/package.json
+++ b/compiler/package.json
@@ -14,6 +14,8 @@
     "create": "node ./lib/create.js --env projectName",
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
     "test": "npm run build && mocha -r mocha-context/register test/test.js",
+    "testPU": "npm run build && mocha -r mocha-context/register test/test.js --partialUpdate",
+    "testAll": "npm run build && mocha -r mocha-context/register test/test.js && mocha -r mocha-context/register test/test.js --partialUpdate",
     "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
     "generateSyntaxParser": "node build_parser.js ./syntax_parser/dist",
     "postinstall": "node npm-install.js"
