--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -41,6 +41,7 @@
         "Line",
         "List",
         "ListItem",
+        "ListItemGroup",
         "LoadingProgress",
         "Marquee",
         "Menu",
@@ -269,6 +270,11 @@
             "name": "ListItem",
             "type": "ListItemAttribute",
             "instance": "ListItemInstance"
+          },
+          {
+            "name": "ListItemGroup",
+            "type": "ListItemGroupAttribute",
+            "instance": "ListItemGroupInstance"
           },
           {
             "name": "LoadingProgress",
