--- a/compiler/package.json
+++ b/compiler/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.0.0",
     "@typescript-eslint/parser": "^4.11.0",
+    "babel-loader": "^8.2.5",
     "chai": "^4.2.0",
     "eslint": "^7.16.0",
     "file-loader": "^6.2.0",
