Bugfix: fixed define array like '[1, 09]' in function body don't report errors
Signed-off-by: laibo102 <laibo2@huawei.com>
Change-Id: Ie7a0ea7625473292bef3da52a7acb4a941f32590
(cherry picked from commit 41e884d1aadf6b21a258670e935007b18745e6ad)
Signed-off-by: laibo102 <laibo2@huawei.com>

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -551,7 +551,8 @@
     "typeRoots": [],
     "lib": [
       "es2020"
-    ]
+    ],
+    "alwaysStrict": true
   },
   "exclude": [
     "node_modules"
