--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -582,7 +582,8 @@
     "typeRoots": [],
     "lib": [
       "es2020"
-    ]
+    ],
+    "alwaysStrict": true
   },
   "exclude": [
     "node_modules"
