fixed 2c89cc7 from https://gitee.com/houhaoyu/developtools_ace-ets2bundle/pulls/1195 houhaoyu@huawei.com
fix storage initialization

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: Ie3b4b1bd7bd0f672f6df9ae34cdc45994512d525

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -2,6 +2,24 @@
   "compileOnSave": false,
   "compilerOptions": {
    "ets": {
+      "propertyDecorators": [
+        {
+          "name": "Link",
+          "needInitialization": false
+        },
+        {
+          "name": "Prop",
+          "needInitialization": false
+        },
+        {
+          "name": "ObjectLink",
+          "needInitialization": false
+        },
+        {
+          "name": "Consume",
+          "needInitialization": false
+        }
+      ],
       "render": {
         "method": ["build", "pageTransition"],
         "decorator": "Builder"
