remove imported types when compiling modules
Signed-off-by: hufeng <hufeng20@huawei.com>
Change-Id: Iae9219728335579cc1c536fe691809900722d76f

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -609,7 +609,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "importsNotUsedAsValues": "preserve",
+    "importsNotUsedAsValues": "remove",
     "noImplicitAny": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
