Transform concurrent decorator
Signed-off-by: hufeng <hufeng20@huawei.com>
Change-Id: I174b6a06935fb19f24177c6d71ccba5833d06063

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -694,6 +694,9 @@
         },
         "property": "stateStyles"
       },
+      "concurrent": {
+        "decorator": "Concurrent"
+      },
       "customComponent": "CustomComponent",
     },
     "allowJs": true,
