fixed b9d7998 from https://gitee.com/zhao-xinyu007/developtools_ace_ets2bundle/pulls/1659 add Menu MenuItem MenuItemGroup
Signed-off-by: zhaoxinyu <zhaoxinyu20@huawei.com>
Change-Id: I81bd47d8e576e8c1762995e30600e2c80e6fb8b6

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -141,6 +141,8 @@
         "LoadingProgress",
         "Marquee",
         "Menu",
+        "MenuItem",
+        "MenuItemGroup",
         "NavDestination",
         "NavRouter",
         "Navigation",
@@ -390,6 +392,16 @@
             "name": "Menu",
             "type": "MenuAttribute",
             "instance": "MenuInstance"
+          },
+          {
+            "name": "MenuItem",
+            "type": "MenuItemAttribute",
+            "instance": "MenuItemInstance"
+          },
+          {
+            "name": "MenuItemGroup",
+            "type": "MenuItemGroupAttribute",
+            "instance": "MenuItemGroupInstance"
           },
           {
             "name": "NavDestination",
