lihong67@huawei.com
optimize compile performance for fast build.

Signed-off-by: lihong <lihong67@huawei.com>
Change-Id: Icae84491dc48796dd3db7e36ca097864e8f9cfdf

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -133,10 +133,12 @@ action("build_ets_sysResource") {
 }
 
 ets_loader_sources = [
+  "compiler/compile_plugin.js",
   "compiler/main.js",
   "compiler/npm-install.js",
   "compiler/package-lock.json",
   "compiler/package.json",
+  "compiler/rollup.config.js",
   "compiler/tsconfig.esm.json",
   "compiler/tsconfig.json",
   "compiler/webpack.config.js",
