--- a/compiler/package.json
+++ b/compiler/package.json
@@ -15,7 +15,8 @@
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
     "test": "npm run build && mocha -r mocha-context/register test/test.js && mocha -r mocha-context/register test/test.js --partialUpdate",
     "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
-    "postinstall": "node npm-install.js"
+    "postinstall": "node npm-install.js",
+    "fastbuild": "rollup -c rollup.config.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -36,6 +37,9 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "deccjsunit": "^1.0.8",
@@ -44,6 +48,9 @@
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "md5": "^2.3.0",
+    "rollup": "^3.5.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
     "ts-loader": "^8.0.12",
     "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
     "webpack": "^5.70.0",
