fixed 91fafa0 from https://gitee.com/houhaoyu/developtools_ace_ets2bundle/pulls/1787 houhaoyu@huawei.com
emit parameter in d.ets

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I9066437c30bda60e50b99856dfa232309c81ca89

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -5,14 +5,10 @@
       "emitDecorators":[
         {
           "name":"Entry", 
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"Component",
-          "emitParameters" : false
-        },
-        {
-          "name":"Preview",
           "emitParameters" : false
         },
         {
@@ -21,7 +17,7 @@
         },
         {
           "name":"Consume", 
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"Link",
@@ -29,11 +25,11 @@
         },
         {
           "name":"LocalStorageLink",
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"LocalStorageProp",
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"ObjectLink", 
@@ -45,7 +41,7 @@
         },
         {
           "name":"Provide",
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"State",
@@ -53,15 +49,11 @@
         },
         {
           "name":"StorageLink",
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"StorageProp",
-          "emitParameters" : false
-        },
-        {
-          "name":"Watch",
-          "emitParameters" : false
+          "emitParameters" : true
         },
         {
           "name":"Builder",
@@ -69,10 +61,6 @@
         },
         {
           "name":"BuilderParam",
-          "emitParameters" : false
-        },
-        {
-          "name":"Styles",
           "emitParameters" : false
         },
         {
