wangyongfei6@huawei.com
add form config json file

Signed-off-by: yfwang6 <wangyongfei6@huawei.com>
Change-Id: I60394ecf9046bd6b48527044e71eba7aa2c52607

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ compiler/lib/
 compiler/declarations/
 compiler/sample/build/
 compiler/component_config.json
+compiler/form_config.json
 compiler/syntax_parser/dist/
