支持轻量图文混排
Signed-off-by: limeng <limeng208@huawei.com>

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -184,7 +184,8 @@
         "GridRow",
         "GridCol",
         "WaterFlow",
-        "FlowItem"
+        "FlowItem",
+        "ImageSpan"
       ],
       "extend": {
         "decorator": "Extend",
@@ -658,6 +659,11 @@
             "name": "FlowItem",
             "type": "FlowItemAttribute",
             "instance": "FlowItemInterface"
+          },
+          {
+            "name": "ImageSpan",
+            "type": "ImageSpanAttribute",
+            "instance": "ImageSpanInterface"
           }
         ]
       },
