--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -186,7 +186,8 @@
         "GridRow",
         "GridCol",
         "WaterFlow",
-        "FlowItem"
+        "FlowItem",
+        "ImageSpan"
       ],
       "extend": {
         "decorator": "Extend",
@@ -670,6 +671,11 @@
             "name": "FlowItem",
             "type": "FlowItemAttribute",
             "instance": "FlowItemInterface"
+          },
+          {
+            "name": "ImageSpan",
+            "type": "ImageSpanAttribute",
+            "instance": "ImageSpanInterface"
           }
         ]
       },
