houhaoyu@huawei.com
update component config

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I0c871b3d24b2de24ec438f7b9ef3868750707314

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -655,27 +655,27 @@
           {
             "name": "GridRow",
             "type": "GridRowAttribute",
-            "instance": "GridRowInterface"
+            "instance": "GridRowInstance"
           },
           {
             "name": "GridCol",
             "type": "GridColAttribute",
-            "instance": "GridColInterface"
+            "instance": "GridColInstance"
           },
           {
             "name": "WaterFlow",
             "type": "WaterFlowAttribute",
-            "instance": "WaterFlowInterface"
+            "instance": "WaterFlowInstance"
           },
           {
             "name": "FlowItem",
             "type": "FlowItemAttribute",
-            "instance": "FlowItemInterface"
+            "instance": "FlowItemInstance"
           },
           {
             "name": "ImageSpan",
             "type": "ImageSpanAttribute",
-            "instance": "ImageSpanInterface"
+            "instance": "ImageSpanInstance"
           }
         ]
       },
