--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -129,6 +129,8 @@
         "LoadingProgress",
         "Marquee",
         "Menu",
+        "MenuItem",
+        "MenuItemGroup",
         "NavDestination",
         "NavRouter",
         "Navigation",
@@ -379,6 +381,16 @@
             "name": "Menu",
             "type": "MenuAttribute",
             "instance": "MenuInstance"
+          },
+          {
+            "name": "MenuItem",
+            "type": "MenuItemAttribute",
+            "instance": "MenuItemInstance"
+          },
+          {
+            "name": "MenuItemGroup",
+            "type": "MenuItemGroupAttribute",
+            "instance": "MenuItemGroupInstance"
           },
           {
             "name": "NavDestination",
@@ -643,27 +655,27 @@
           {
             "name": "GridRow",
             "type": "GridRowAttribute",
-            "instance": "GridRowInterface"
+            "instance": "GridRowInstance"
           },
           {
             "name": "GridCol",
             "type": "GridColAttribute",
-            "instance": "GridColInterface"
+            "instance": "GridColInstance"
           },
           {
             "name": "WaterFlow",
             "type": "WaterFlowAttribute",
-            "instance": "WaterFlowInterface"
+            "instance": "WaterFlowInstance"
           },
           {
             "name": "FlowItem",
             "type": "FlowItemAttribute",
-            "instance": "FlowItemInterface"
+            "instance": "FlowItemInstance"
           },
           {
             "name": "ImageSpan",
             "type": "ImageSpanAttribute",
-            "instance": "ImageSpanInterface"
+            "instance": "ImageSpanInstance"
           }
         ]
       },
